# TriagulateMonotonePolygon

./: .gitignore  CMakeLists.txt  README.md
InputFiles/: exampleInput.txt
include/: Args.hxx  CLI11.hpp  IO.hxx  Mesh.hxx  TriangulationMonotonePolygon.hxx
src/: Args.cxx  IO.cxx  TriangulationMonotonePolygon.cxx  main.cxx  predicates.c
